kubernetes/deployment-service-booking.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service-deployment
  namespace: onlineeventbookinghamzaimran
  labels:
    app: booking-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: hamzaimran66628/dev-booking-service:latest
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: onlineeventbookinghamzaimran
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
