kubernetes/deployment-service-event.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service-deployment
  namespace: onlineeventbookinghamzaimran
  labels:
    app: event-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: hamzaimran66628/dev-event-service:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: onlineeventbookinghamzaimran
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
