kubernetes/deployment-service-notification.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-deployment
  namespace: onlineeventbookinghamzaimran
  labels:
    app: notification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: hamzaimran66628/dev-notification-service:latest
          ports:
            - containerPort: 3004
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: onlineeventbookinghamzaimran
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
  type: ClusterIP
