kubernetes/deployment-service-payment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-deployment
  namespace: onlineeventbookinghamzaimran
  labels:
    app: payment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: hamzaimran66628/dev-payment-service:latest
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: onlineeventbookinghamzaimran
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
